clusters/casa/platform/traefik/manifests/dashboard.route.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-slash
  namespace: traefik
spec:
  redirectRegex:
    regex: ^(https?://[^/]+/dashboard)$
    replacement: ${1}/
    permanent: false
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
  hostnames:
    - traefik.biplane.casa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /dashboard
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: traefik-dashboard-slash
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oauth2-proxy
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: secure-headers
      backendRefs:
        - name: api@internal
          kind: TraefikService
          group: traefik.io
